# simulations

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: gallery.md
examples/: spring_mass_demo.py
src/simulations/systems/: spring_mass.py
src/simulations/visualisations/: spring_mass.py
tests/: test_spring_mass.py  test_spring_mass_visualisations.py
